# npbudget

./: .gitignore  Cargo.toml  manage.py
npbudget/: asgi.py  settings.py  urls.py  wsgi.py
orgs/: admin.py  forms.py  managers.py  models.py
orgs/migrations/: 0001_initial.py
src/: main.rs
templates/: base.rs.html  hello_args.rs.html
