[package]
name = "npbudget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ructe.workspace = true
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["full"] }

[build-dependencies]
ructe.workspace = true

[workspace.dependencies]
# ructe = "0.17.0"
ructe = { git = "https://github.com/Zynh0722/ructe.git", branch = "rust-analyzer-workaround" }
